WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186400
bmalloc: Fix 'noreturn' warnings when compiling with -std=gnu++17
https://bugs.webkit.org/show_bug.cgi?id=186400
Summary
bmalloc: Fix 'noreturn' warnings when compiling with -std=gnu++17
David Kilzer (:ddkilzer)
Reported
2018-06-07 10:01:13 PDT
Fix 'noreturn' warnings when compiling bmalloc with -std=gnu++17: Source/bmalloc/bmalloc/Scavenger.cpp:363:1: error: function 'threadRunLoop' could be declared with attribute 'noreturn' [-Werror,-Wmissing-noreturn] { ^ Source/bmalloc/bmalloc/Scavenger.cpp:358:1: error: function 'threadEntryPoint' could be declared with attribute 'noreturn' [-Werror,-Wmissing-noreturn] { ^ 2 errors generated.
Attachments
Patch v1
(3.35 KB, patch)
2018-06-07 10:20 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Patch v2
(4.23 KB, patch)
2018-06-07 10:36 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Patch v3
(4.01 KB, patch)
2018-06-07 12:17 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2018-06-07 10:20:03 PDT
Created
attachment 342184
[details]
Patch v1
David Kilzer (:ddkilzer)
Comment 2
2018-06-07 10:27:24 PDT
Comment on
attachment 342184
[details]
Patch v1 Oh dear. Older compilers don't realize this method doesn't return!
David Kilzer (:ddkilzer)
Comment 3
2018-06-07 10:36:16 PDT
Created
attachment 342185
[details]
Patch v2
Saam Barati
Comment 4
2018-06-07 10:54:57 PDT
Comment on
attachment 342185
[details]
Patch v2 View in context:
https://bugs.webkit.org/attachment.cgi?id=342185&action=review
> Source/bmalloc/bmalloc/BCompiler.h:51 > +#if defined(_MSC_VER) > +#define BCOMPILER_MSVC 1 > +#endif
Why do we care about this? We don't compile bmalloc on windows AFAIK.
David Kilzer (:ddkilzer)
Comment 5
2018-06-07 11:14:57 PDT
(In reply to Saam Barati from
comment #4
)
> Comment on
attachment 342185
[details]
> Patch v2 > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=342185&action=review
> > > Source/bmalloc/bmalloc/BCompiler.h:51 > > +#if defined(_MSC_VER) > > +#define BCOMPILER_MSVC 1 > > +#endif > > Why do we care about this? We don't compile bmalloc on windows AFAIK.
I was porting the WTF_NO_RETURN macro over will full fidelity. If we don't compile bmalloc for Windows, then yes, we can leave this out.
David Kilzer (:ddkilzer)
Comment 6
2018-06-07 12:17:19 PDT
Created
attachment 342199
[details]
Patch v3
WebKit Commit Bot
Comment 7
2018-06-07 14:05:35 PDT
Comment on
attachment 342199
[details]
Patch v3 Clearing flags on attachment: 342199 Committed
r232599
: <
https://trac.webkit.org/changeset/232599
>
WebKit Commit Bot
Comment 8
2018-06-07 14:05:36 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2018-06-07 14:06:18 PDT
<
rdar://problem/40909586
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug